tests/js/invalid/function/shadowing.buri
a = 1

myFunc = () =>
    -- cannot shadow the variable name "a"
    a = 2
    a